force-app/main/default/objects/Declaration_Questions_Template__c/Declaration_Questions_Template__c.object-meta.xml
<CustomObject>
    <label>Declaration Questions Template</label>
    <nameField>
        <label>Declaration Questions Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Declaration Questions Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>