force-app/main/default/objects/Declaration_Questions_Template__c/fields/Declaration_Answer_system__c.field-meta.xml
<CustomField>
    <fullName>Declaration_Answer_system__c</fullName>
    <label>Declaration Answer (system)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>