force-app/main/default/objects/Declaration_Questions_Template__c/fields/Declaration_Template__c.field-meta.xml
<CustomField>
    <fullName>Declaration_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Declaration Template</label>
    <referenceTo>Declaration_Template__c</referenceTo>
    <relationshipLabel>Declaration Questions Templates</relationshipLabel>
    <relationshipName>Declaration_T_Declaration_QTs</relationshipName>
    <type>Lookup</type>
</CustomField>