force-app/main/default/objects/Declaration_Questions_Template__c/fields/Exempt__c.field-meta.xml
<CustomField>
    <fullName>Exempt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When marked true, this declaration question will be exempt from forcing the user to answer &quot;Yes&quot; in order to proceed during renewals.</description>
    <inlineHelpText>When marked true, this declaration question will be exempt from forcing the user to answer &quot;Yes&quot; in order to proceed during renewals.</inlineHelpText>
    <label>Exempt</label>
    <type>Checkbox</type>
</CustomField>