force-app/main/default/objects/Declaration_Questions_Template__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <label>IsActive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>