force-app/main/default/objects/Declaration_Questions_Template__c/fields/Other_Text_Option__c.field-meta.xml
<CustomField>
    <fullName>Other_Text_Option__c</fullName>
    <inlineHelpText>Does this question have an option to type free form text?</inlineHelpText>
    <label>Other Text Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>