force-app/main/default/objects/Declaration_Questions_Template__c/fields/Question_Type__c.field-meta.xml
<CustomField>
    <fullName>Question_Type__c</fullName>
    <inlineHelpText>What is the type of question being asked?</inlineHelpText>
    <label>Question Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YesNo</fullName>
                <label>Yes/No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>