force-app/main/default/objects/Declaration_Questions_Template__c/fields/Renewal_Template__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewal Template</label>
    <referenceTo>Renewal_Template__c</referenceTo>
    <relationshipLabel>Declaration Questions Templates</relationshipLabel>
    <relationshipName>RenewalTemplateDeclaration_Q_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>