force-app/main/default/objects/Declaration_Questions_Template__c/recordTypes/Application_Declaration_Question.recordType-meta.xml
<RecordType>
    <fullName>Application_Declaration_Question</fullName>
    <active>true</active>
    <label>Application Declaration Question</label>
</RecordType>