force-app/main/default/objects/Declaration_Questions_Template__c/recordTypes/Renewal_Declaration_Question.recordType-meta.xml
<RecordType>
    <fullName>Renewal_Declaration_Question</fullName>
    <active>true</active>
    <label>Renewal Declaration Question</label>
</RecordType>